ua and locale updates

--- a/locales/wcg-bot_da-DK.json
+++ b/locales/wcg-bot_da-DK.json
@@ -1,5 +1,5 @@
 {
-	"newAccount": "Opret en konto på World Community Grid (eller redigér en eksisterende) med følgende navn : {{username}} ",
+	"newAccount": "Opret en konto på World Community Grid (eller rediger en eksisterende) med følgende navn : {{username}} ",
 	"usernameCanBeChanged": "Du kan ændre navnet senere hvis du vil. Klik på linket herunder når du er klar.",
 	"checkAccountButton": "Tjek min konto",
 	"accountLinked": "Din WCG-konto blev linket korrekt.",
@@ -15,9 +15,9 @@
 	"okButton": "ok",
 	"accountCheckFailed": "Tjek af konto mislykkedes. Sørg for at du har brugt {{accountName}} som kontonavn og prøv igen.",
 	"scoreFetchingFailed": "Kunne ikke hente din WCG-score til igangværende distribution. Sørg for at dit kontonavn er: {{accountName}}",
-	"payoutForCurrentWork": "Udbetaling på {{amountByte}}GB og {{amountAsset}} {{labelAsset}} er gennemført som tak for din indsats",
-	"errorOccurred": "Der opstod i fejl. Admin er adviseret om problemet. Prøv igen om et par timer.",
-	"seemsUnresponsive": "Error, World Community Grid seems unresponsive. Please retry later.",
+	"payoutForCurrentWork": "Udbetaling på {{amountByte}}GB og {{amountAsset}} {{labelAsset}} er gennemført som tak for din indsats.",
+	"errorOccurred": "Der opstod en fejl. Admin er adviseret om problemet. Prøv igen om et par timer.",
+	"seemsUnresponsive": "Fejl, World Community Grid svarer tilsyneladende ikke lige nu. Prøv igen senere.",
 	"usernameMismatch": "Navnet svarer ikke til WCG-kontoen med ID {{accountID}}",
 	"notValidAddress": "Det er en ugyldig adresse.",
 	"fixUsernameMismatch": "Kontonavnet {{accountName}} svarer ikke til ID {{WCG_id}}. Du vil ikke modtage betalinger før det er rettet eller du har linket en ny WCG-konto.",
