--- a/locales/wcg-bot_ja-JP.json
+++ b/locales/wcg-bot_ja-JP.json
@@ -1,28 +1,28 @@
 {
-	"newAccount": "World Community Gridアカウントを作成もしくは既存アカウントのユーザー名変更: {{username}} ",
-	"usernameCanBeChanged": "必要に応じて後で変更することができます。 完了したら、下のリンクをクリックしてください.",
+	"newAccount": "https://www.worldcommunitygrid.org でWorld Community Gridアカウントを作成するか、このユーザー名で登録されている既存アカウントを修正してください: {{username}}",
+	"usernameCanBeChanged": "必要に応じて後で変更することができます。 完了したら、下のリンクをクリックしてください。",
 	"checkAccountButton": "アカウント確認",
 	"accountLinked": "WCGアカウントが正常に接続されました。",
-	"insertAddress": "報酬の受取先のアドレスを入力してください ('...'をクリックして「Insert my address」を選択)",
-	"addressLinked": "おめでとうございます。",
+	"insertAddress": "報酬の受取先のアドレスを入力してください ('...'をクリックしてアドレスを挿入)",
+	"addressLinked": "おめでとうございます！",
 	"setupComplete": "セットアップが完了しました！World Community Gridプロジェクトへの貢献度に応じて {{accountName}} (ID: {{accountID}}) のアカウントから定期的に報酬が贈られます。",
-	"changeLinkedButton": "WCGアカウント変更",
+	"changeLinkedButton": "リンクしたWCGアカウントの変更",
 	"changePayoutButton": "報酬の受取先アドレス変更",
 	"changeUsernameButton": "アカウント名変更",
 	"enterNewUsername": "WCGアカウントID  {{accountID}} の新しい名前を入力してください",
 	"cancelButton": "キャンセル",
 	"usernameValidated": "新しい名前が確認されました。",
-	"okButton": "ok",
-	"accountCheckFailed": "アカウントIDの確認に失敗しました。 {{accountName}} をアカウント名に設定して再試行してください。",
+	"okButton": "OK",
+	"accountCheckFailed": "アカウントの確認に失敗しました。 {{accountName}} をアカウント名に設定していることを確認し、再試行してください。",
 	"scoreFetchingFailed": "現在進行中の配布のWCGスコアを取得できません。 あなたのアカウント名が{{accountName}}であることを確認してください。",
-	"payoutForCurrentWork": "あなたの貢献に対して{{amountByte}}GB と {{amountAsset}} {{labelAsset}} の報酬が支払われました",
-	"errorOccurred": "予期しないエラーが発生しました。 管理者に通知されますので、数時間後にもう一度お試しください",
-	"seemsUnresponsive": "Error, World Community Grid seems unresponsive. Please retry later.",
+	"payoutForCurrentWork": "あなたの貢献に対して{{amountByte}}GB と {{amountAsset}} {{labelAsset}} の報酬が支払われました。",
+	"errorOccurred": "予期しないエラーが発生しました。 管理者に通知されますので、数時間後に再試行してください。",
+	"seemsUnresponsive": "エラー、World Community Gridが応答しません。後で再試行してください。",
 	"usernameMismatch": "この名前はWCGアカウントID {{accountID}} と一致しません",
-	"notValidAddress": "正しいアドレスではありません。",
+	"notValidAddress": "これは有効なアドレスではありません。",
 	"fixUsernameMismatch": "アカウント名: {{accountName}} はID {{WCG_id}} に対応してません。この問題を修正するか、新しいWCGアカウントをリンクするまで報酬は受け取れません。",
 	"visitWiki": "より詳しい情報は、こちらのwikiからご確認ください: https://wiki.byteball.org/WCG_distribution",
 	"retryButton": "リトライ",
 	"anotherUsernameButton": "他のアカウント名に切り替える",
-	"payoutForPreviousWork": "{{amountByte}}GB と {{amountAsset}} {{labelAsset}} があなたのこれまでのワールド・コミュニティ・グリッドへの貢献の報酬として支払われました。"
+	"payoutForPreviousWork": "{{amountByte}}GB と {{amountAsset}} {{labelAsset}} があなたのこれまでのWorld Community Gridへの貢献の報酬として支払われました。"
 }
