--- a/locales/wcg-bot_nl-NL.json
+++ b/locales/wcg-bot_nl-NL.json
@@ -1,25 +1,25 @@
 {
-	"newAccount": "Maak alsjeblieft een World Community Grid account aan of geef een bestaand account de volgende gebruikersnaam: {{username}} ",
-	"usernameCanBeChanged": "Je kan het later terugveranderen als je dit zou willen. Klik als je klaar bent op de onderstaande link.",
+	"newAccount": "Maak alsjeblieft een World Community Grid account aan op https://www.worldcommunitygrid.org of geef een bestaand account de volgende gebruikersnaam: {{username}}",
+	"usernameCanBeChanged": "Je kan het later terug veranderen als je dit zou willen. Klik als je klaar bent op de onderstaande link.",
 	"checkAccountButton": "Controleer mijn account",
 	"accountLinked": "Je WCG account is succesvol gelinkt.",
-	"insertAddress": "Vul alsjeblieft het adres in waar je je betalingen op wil ontvangen (klik op '...' mijn adres invoeren)",
+	"insertAddress": "Vul alsjeblieft het adres in waar je je betalingen op wil ontvangen (klik op '...' Mijn adres invoeren)",
 	"addressLinked": "Gefeliciteerd!",
 	"setupComplete": "Setup voltooid! Eens in de zoveel tijd zullen beloningen, proportioneel aan contributies aan World Community Grid projecten van het account {{accountName}} (ID: {{accountID}}), naar je betaling account worden verstuurd.",
 	"changeLinkedButton": "Verander het gelinkte WCG account",
 	"changePayoutButton": "Verander het betaling adres",
 	"changeUsernameButton": "Verander de naam van het account",
 	"enterNewUsername": "Vul alsjeblieft de nieuwe naam van je WCG account id {{accountID}} in",
-	"cancelButton": "Annuleren",
+	"cancelButton": "annuleren",
 	"usernameValidated": "Nieuwe naam gevalideerd.",
 	"okButton": "ok",
 	"accountCheckFailed": "Account check mislukt. Zorg alsjeblieft dat je {{accountName}} als account naam hebt ingesteld, en probeer het opnieuw.",
 	"scoreFetchingFailed": "Niet in staat om je WCG score te krijgen voor de huidige distributie. Controleer alsjeblieft of je accountnaam {{accountname}} is.",
 	"payoutForCurrentWork": "Een betaling van {{amountByte}}GB en {{amountAsset}} {{labelAsset}} was gemaakt om je contributie te belonen.",
-	"errorOccurred": "Er is een onverwachte fout opgetreden. De admin is op de hoogte gebracht. Probeer het alsjeblieft over een paar uur opnieuw.",
-	"seemsUnresponsive": "Error, World Community Grid seems unresponsive. Please retry later.",
+	"errorOccurred": "Er is een onverwachte fout opgetreden. De administrator is op de hoogte gebracht. Probeer het alsjeblieft over een paar uur opnieuw.",
+	"seemsUnresponsive": "Fout, World Community Grid reageert niet. Probeer het later opnieuw.",
 	"usernameMismatch": "Deze naam komt niet overeen met het WCG account ID {{accountID}}",
-	"notValidAddress": "Dit is geen valide adres.",
+	"notValidAddress": "Dit is geen geldig adres.",
 	"fixUsernameMismatch": "Het account {{accountName}} komt niet overeen met het ID {{WCG_id}}. Je zal geen betalingen ontvangen totdat dit is opgelost of je een nieuwe WCG account hebt gelinkt.",
 	"visitWiki": "Voor meer informatie, bezoek onze wiki: https://wiki.byteball.org/WCG_distribution",
 	"retryButton": "Probeer opnieuw",
