--- a/locales/wcg-bot_zh-CN.json
+++ b/locales/wcg-bot_zh-CN.json
@@ -1,5 +1,5 @@
 {
-	"newAccount": "请创建一个全球社区网格账号或用此用户名来修改现有的账号: {{username}} ",
+	"newAccount": "请在 https://www.worldcommunitygrid.org 创建一个世界社区网格帐号, 或者用此用户名修改现有帐号: {{username}}",
 	"usernameCanBeChanged": "如果你想要的话，可以在后续对它进行修改。完成后请点击以下链接.",
 	"checkAccountButton": "核对我的账号",
 	"accountLinked": "WCG 账号已成功连接.",
@@ -7,7 +7,7 @@
 	"addressLinked": "恭喜完成!",
 	"setupComplete": "设置完成! 账号{{accountName}} (ID: {{accountID}}) 对全球社区网格项目所做的贡献会按比例定期发放到付款账号。",
 	"changeLinkedButton": "更改连接的WCG 账号",
-	"changePayoutButton": "更改付款账号",
+	"changePayoutButton": "更改支付地址",
 	"changeUsernameButton": "更改账号名字",
 	"enterNewUsername": "请填入你的WCG 账号id {{accountID}} 的新名字",
 	"cancelButton": "取消",
@@ -17,7 +17,7 @@
 	"scoreFetchingFailed": "无法得到正在分配中的WCG得分。请确定账号名是: {{accountName}}",
 	"payoutForCurrentWork": "已经支付{{amountByte}}GB 和{{amountAsset}} {{labelAsset}} 来奖励你做出的贡献.",
 	"errorOccurred": "出现意外错误。已经通知管理员。请在几小时后再试.",
-	"seemsUnresponsive": "Error, World Community Grid seems unresponsive. Please retry later.",
+	"seemsUnresponsive": "出错，世界社区网格似乎没有反应。请稍后再试。",
 	"usernameMismatch": "此名字和WCG 账号ID {{accountID}}不符",
 	"notValidAddress": "这个地址无效.",
 	"fixUsernameMismatch": "账号名: {{accountName}}和ID {{WCG_id}}不吻合. 在此问题被修正或者连接到新的WCG 账号之前无法接收付款.",
