--- a/locales/wcg-bot_de-DE.json
+++ b/locales/wcg-bot_de-DE.json
@@ -1,5 +1,5 @@
 {
-	"newAccount": "Bitte erstellen Sie ein 'World Community Grid' Konto oder verändern Sie ein existierendes mit folgenden Namen: {{username}} ",
+	"newAccount": "Bitte erstellen Sie ein 'World Community Grid' Konto oder verändern Sie ein existierendes mit folgenden Namen: {{username}}",
 	"usernameCanBeChanged": "Sie können ihn später ändern, wenn Sie wünschen. Wenn Sie fertig sind, klicken Sie auf den Link unten.",
 	"checkAccountButton": "Mein Konto prüfen",
 	"accountLinked": "Ihr WCG Konto wurde erfolgreich verbunden.",
@@ -12,12 +12,12 @@
 	"enterNewUsername": "Bitte geben Sie den neuen Namen für Ihre WCG Konto ID ein {{accountID}}",
 	"cancelButton": "Abbrechen",
 	"usernameValidated": "Neuer name validiert.",
-	"okButton": "ok",
+	"okButton": "Ok",
 	"accountCheckFailed": "Kontoverifizierung fehlgeschlagen. Bitte verwenden Sie {{accountName}} als Kontonamen und versuchen Sie es bitte erneut.",
 	"scoreFetchingFailed": "WCG Punktestand konnte für die laufende Verteilung leider nicht abgerufen werden. Bitte stellen Sie sicher, dass folgendes Ihr Kontoname ist: {{accountName}}",
 	"payoutForCurrentWork": "Sie haben eine Auszahlung in Höhe von {{amountByte}}GB und {{amountAsset}} {{labelAsset}} für Ihren Beitrag erhalten.",
 	"errorOccurred": "Es ist ein unvorhergesehener Fehler aufgetreten. Admin wurde benachrichtigt. Bitte versuchen Sie es in ein paar Stunden erneut.",
-	"seemsUnresponsive": "Error, World Community Grid seems unresponsive. Please retry later.",
+	"seemsUnresponsive": "Fehler, World Community Grid scheint nicht zu reagiert. Versuchen Sie später erneut.",
 	"usernameMismatch": "Der Name stimmt nicht mit dem Namen Ihres WCG-Kontos überein: {{accountID}}",
 	"notValidAddress": "Dies ist keine valide Adresse.",
 	"fixUsernameMismatch": "Der Kontoname {{accountName}} stimmt nicht mit der ID {{WCG_id}} überein. Sie werden keine Auszahlung erhalten, bis dieses Problem behoben ist oder Sie ein neues WCG Konto verbinden.",
