--- a/locales/wcg-bot_es-ES.json
+++ b/locales/wcg-bot_es-ES.json
@@ -1,5 +1,5 @@
 {
-	"newAccount": "Por favor cree una cuenta World Community Grid con este nombre de usuario (o edite una existente): {{username}} ",
+	"newAccount": "Por favor cree una cuenta World Community Grid con este nombre de usuario (o edite una existente): {{username}}",
 	"usernameCanBeChanged": "Podrá cambiarla más tarde si lo desea. Cuando esté listo haga clic en el enlace inferior.",
 	"checkAccountButton": "Comprobar mi cuenta",
 	"accountLinked": "Su cuenta WCG se ha enlazado correctamente.",
@@ -10,16 +10,16 @@
 	"changePayoutButton": "Cambiar dirección de pagos",
 	"changeUsernameButton": "Cambiar nombre de cuenta",
 	"enterNewUsername": "Por favor introduzca un nuevo nombre para su cuenta WCG con id {{accountID}}",
-	"cancelButton": "Cancelar",
+	"cancelButton": "cancelar",
 	"usernameValidated": "Nuevo nombre validado.",
 	"okButton": "ok",
 	"accountCheckFailed": "Comprobación de cuenta fallida. Por favor compruebe que su nombre de cuenta es {{accountName}} y vuelva a intentarlo.",
-	"scoreFetchingFailed": "No se puede obtener su puntuación WCG para la distribución continua. Por favor compruebe que su nombre de cuenta es: {{accountName}}",
+	"scoreFetchingFailed": "No se puede obtener su puntuación WCG. Por favor compruebe que su nombre de cuenta es: {{accountName}}",
 	"payoutForCurrentWork": "Se ha hecho un pago de {{amountByte}}GB y {{amountAsset}} {{labelAsset}} como recompensa a su contribución.",
 	"errorOccurred": "Ha ocurrido un error inesperado. Se ha notificado al adminstrador. Por favor, vuelva a intentarlo en unas horas.",
-	"seemsUnresponsive": "Error, World Community Grid seems unresponsive. Please retry later.",
+	"seemsUnresponsive": "Error, World Community Grid parece no responder. Por favor vuelva a intentarlo más tarde.",
 	"usernameMismatch": "Este nombre no corresponde al ID de cuenta de la WCG {{accountID}}",
-	"notValidAddress": "Esta no es una dirección válida.",
+	"notValidAddress": "Esta dirección no es válida.",
 	"fixUsernameMismatch": "La cuenta con nombre: {{accountName}} no se corresponde con el ID {{WCG_id}}. No recibirá pagos hasta que corrija el problema o hasta que enlace nueva cuenta WCG.",
 	"visitWiki": "Para más información, por favor visite nuestra wiki: https://wiki.byteball.org/WCG_distribution",
 	"retryButton": "Reintentar",
