--- a/locales/wcg-bot_it-IT.json
+++ b/locales/wcg-bot_it-IT.json
@@ -1,28 +1,28 @@
 {
 	"newAccount": "Crea un account World Community Grid oppure modificane uno esistente con questo username: {{username}}",
-	"usernameCanBeChanged": "E' possibile modificarlo in seguito se lo si desidera. Fare click sul collegamento qui sotto una volta fatto.",
+	"usernameCanBeChanged": "Puoi cambiarlo più tardi se lo desideri. Clicca sul link qui sotto quando hai finito.",
 	"checkAccountButton": "Controlla il mio account",
 	"accountLinked": "Il tuo account WCG è stato collegato con successo.",
-	"insertAddress": "Inserisci l'indirizzo che vuoi utilizzare come indirizzo di payout (fare click su '...' Inserisci il mio indirizzo)",
+	"insertAddress": "Si prega di inserire l'indirizzo che si desidera utilizzare come indirizzo di pagamento (fare clic su '...' Inserisci il mio indirizzo)",
 	"addressLinked": "Congratulazioni!",
-	"setupComplete": "Setup completato! Periodicamente, le ricompense proporzionate in base al tuo contributo a to World Community Grid project dell'account {{accountName}} (ID: {{accountID}}) verranno inviate al tuo account di payout.",
-	"changeLinkedButton": "Cambia collegamento account WCG",
-	"changePayoutButton": "Cambia indirizzo di payout",
-	"changeUsernameButton": "Cambia nome account",
-	"enterNewUsername": "Inserisci il nuovo nome per il tuo WGC account id {{accountID}}",
-	"cancelButton": "Annulla",
-	"usernameValidated": "Nuovo nome validato.",
+	"setupComplete": "Installazione completata! Periodicamente, i premi proporzionali al tuo contributo al progetto World Community Grid con l'account {{accountName}} (ID: {{accountID}}) verranno inviati al tuo account di pagamento.",
+	"changeLinkedButton": "Cambia account WCG collegato",
+	"changePayoutButton": "Cambia indirizzo di pagamento",
+	"changeUsernameButton": "Cambia il nome dell'account",
+	"enterNewUsername": "Inserisci il nuovo nome per il tuo ID account WCG {{accountID}}",
+	"cancelButton": "annullare",
+	"usernameValidated": "Nuovo nome convalidato.",
 	"okButton": "ok",
-	"accountCheckFailed": "Controllo account fallito. Assicurati di avere impostato {{accountName}} come nome account e riprova.",
+	"accountCheckFailed": "Controllo account fallito. Assicurati di aver impostato {{accountName}} come nome account e riprova.",
 	"scoreFetchingFailed": "Impossibile ottenere il tuo WCG score per la distribuzione in corso. Assicurati che il nome account sia: {{accountName}}",
-	"payoutForCurrentWork": "Un payout di {{amountByte}}GB e {{amountAsset}} {{labelAsset}} è stato effettuato per ricompensare  la tua contribuzione.",
-	"errorOccurred": "Si è verificato un errore imprevisto. E' stata inviata una notifica all'Admin. Riprova tra qualche ora.",
-	"seemsUnresponsive": "Error, World Community Grid seems unresponsive. Please retry later.",
-	"usernameMismatch": "Questo nome non corrisponde al WCG account ID {{accountID}}",
+	"payoutForCurrentWork": "È stato effettuato un pagamento di {{amountByte}}GB e {{amountAsset}} {{labelAsset}} per premiare il tuo contributo.",
+	"errorOccurred": "Si è verificato un errore imprevisto. E' stata inviata una notifica all'Admin. Perfavore riprova tra qualche ora.",
+	"seemsUnresponsive": "Errore, World Community Grid sembra non rispondere. Si prega di riprovare più tardi.",
+	"usernameMismatch": "Questo nome non corrisponde all'account WCG con ID {{accountID}}",
 	"notValidAddress": "Questo non è un indirizzo valido.",
-	"fixUsernameMismatch": "Il nome account: {{accountName}} non corrisponde all'ID {{WCG_id}}. Non riceverai nessun payout finché non correggi questo problema o non colleghi il tuo nuovo account WCG.",
+	"fixUsernameMismatch": "Il nome account: {{accountName}} non corrisponde all'ID {{WCG_id}}. Non riceverai i pagamenti finché non correggi questo problema o non colleghi il tuo nuovo account WCG.",
 	"visitWiki": "Per ulteriori informazioni, visita la nostra wiki: https://wiki.byteball.org/WCG_distribution",
 	"retryButton": "Riprova",
 	"anotherUsernameButton": "Cambia con un altro nome account",
-	"payoutForPreviousWork": "Un payout di {{amountByte}}GB e {{amountAsset}} {{labelAsset}} è stato effettuato per premiare il tuo precedente contributo alla World Community Grid."
+	"payoutForPreviousWork": "È stato effettuato un pagamento di {{amountByte}}GB e {{amountAsset}} {{labelAsset}} per premiare il tuo precedente contributo alla World Community Grid."
 }
