--- a/locales/wcg-bot_el-GR.json
+++ b/locales/wcg-bot_el-GR.json
@@ -20,7 +20,7 @@
 	"seemsUnresponsive": "Σφάλμα, το World Community Grid δεν ανταποκρίνεται. Παρακαλώ προσπαθήστε αργότερα.",
 	"usernameMismatch": "Το όνομα δεν αντιστοιχεί στο αναγνωριστικό λογαριασμού WCG {{accountID}}",
 	"notValidAddress": "Αυτή δεν είναι μια έγκυρη διεύθυνση.",
-	"fixUsernameMismatch": "Το όνομα λογαριασμού: {{accountName}} δεν αντιστοιχεί στο αναγνωριστικό {{WCG_id}}. Δε θα λάβετε πληρωμές μέχρι να διορθώσετε το πρόβλημα ή να συνδέσετε νέο λογαριασμό WCG.",
+	"fixUsernameMismatch": "Το όνομα λογαριασμού: {{accountName}} δεν αντιστοιχεί στο αναγνωριστικό {{accountID}}. Δε θα λάβετε πληρωμές μέχρι να διορθώσετε το πρόβλημα ή να συνδέσετε νέο λογαριασμό WCG.",
 	"visitWiki": "Για περισσότερες πληροφορίες, παρακαλούμε επισκεφθείτε το wiki: https://wiki.byteball.org/WCG_distribution",
 	"retryButton": "Επανάληψη",
 	"anotherUsernameButton": "Αλλαγή ονόματος λογαριασμού",
