--- a/locales/wcg-bot_es-ES.json
+++ b/locales/wcg-bot_es-ES.json
@@ -20,7 +20,7 @@
 	"seemsUnresponsive": "Error, World Community Grid parece no responder. Por favor vuelva a intentarlo más tarde.",
 	"usernameMismatch": "Este nombre no corresponde al ID de cuenta de la WCG {{accountID}}",
 	"notValidAddress": "Esta dirección no es válida.",
-	"fixUsernameMismatch": "La cuenta con nombre: {{accountName}} no se corresponde con el ID {{WCG_id}}. No recibirá pagos hasta que corrija el problema o hasta que enlace nueva cuenta WCG.",
+	"fixUsernameMismatch": "La cuenta con nombre: {{accountName}} no se corresponde con el ID {{accountID}}. No recibirá pagos hasta que corrija el problema o hasta que enlace nueva cuenta WCG.",
 	"visitWiki": "Para más información, por favor visite nuestra wiki: https://wiki.byteball.org/WCG_distribution",
 	"retryButton": "Reintentar",
 	"anotherUsernameButton": "Cambiar a otro nombre de cuenta",
