--- a/locales/wcg-bot_hu-hu.json
+++ b/locales/wcg-bot_hu-hu.json
@@ -20,7 +20,7 @@
 	"seemsUnresponsive": "Error, World Community Grid seems unresponsive. Please retry later.",
 	"usernameMismatch": "Ez a név nem tartozik a {{accountID}} azonosítószámú WCG felhasználóhoz",
 	"notValidAddress": "Érvénytelen cím!",
-	"fixUsernameMismatch": "A {{accountName}} felhasználónév nem tartozik a {{WCG_id}} azonosítóhoz. A jutalmad nem kerül kifizetésre amíg ezt a hibát ki nem javítod vagy amíg be nem állítasz egy másik WCG felhasználót.",
+	"fixUsernameMismatch": "A {{accountName}} felhasználónév nem tartozik a {{accountID}} azonosítóhoz. A jutalmad nem kerül kifizetésre amíg ezt a hibát ki nem javítod vagy amíg be nem állítasz egy másik WCG felhasználót.",
 	"visitWiki": "További információkért látogass a https://wiki.byteball.org/WCG_distribution weboldalra",
 	"retryButton": "Újra",
 	"anotherUsernameButton": "Másik felhasználónévre váltás",
