--- a/locales/en.json
+++ b/locales/en.json
@@ -24,5 +24,7 @@
 	"visitWiki": "For more information, please visit our wiki: https://wiki.byteball.org/WCG_distribution",
 	"retryButton": "Retry",
 	"anotherUsernameButton": "Change to another username",
-	"payoutForPreviousWork": "A payout of {{amountByte}}GB and {{amountAsset}} {{labelAsset}} was made to reward your previous contribution to World Community Grid."
+	"payoutForPreviousWork": "A payout of {{amountByte}}GB and {{amountAsset}} {{labelAsset}} was made to reward your previous contribution to World Community Grid.",
+	"userInTeam" : "As a byteball.org team member, you will get a {{bonus}}% bonus.",
+	"userNotInTeam" : "You can join the byteball.org team and get a {{bonus}}% bonus. Go https://www.worldcommunitygrid.org/team/viewTeamInfo.do?teamId={{teamId}} to join us."
 }
