add direct link to team

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,5 @@
 {
-	"newAccount": "Please create a World Community Grid account at https://www.worldcommunitygrid.org or modify an existing one with this username: {{username}} and make sure that you have chosen the 'Display my data' option on My Profile page. Step by step guide can be seen on wiki page https://wiki.byteball.org/WCG_distribution#A_quick_guide_to_linking_your_wallet_with_WCG",
+	"newAccount": "Please create a World Community Grid account at https://join.worldcommunitygrid.org?teamId={{teamId}} or modify an existing one with this username: {{username}} and make sure that you have chosen the 'Display my data' option on My Profile page. Step by step guide can be seen on wiki page https://wiki.byteball.org/WCG_distribution#A_quick_guide_to_linking_your_wallet_with_WCG",
 	"usernameCanBeChanged": "You can change it later if you desire. Click on the link below when done.",
 	"checkAccountButton": "Check my account",
 	"accountLinked": "Your WCG account is successfully linked.",
